[wip] Docker container for Clojure API